; ModuleID = '/home/carl/AnghaBench/linux/drivers/target/extr_target_core_transport.c_transport_set_vpd_ident_type.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/target/extr_target_core_transport.c_transport_set_vpd_ident_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.t10_vpd = type { i8 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @transport_set_vpd_ident_type(%struct.t10_vpd* %0, i8* %1) #0 {
  %3 = alloca %struct.t10_vpd*, align 8
  %4 = alloca i8*, align 8
  store %struct.t10_vpd* %0, %struct.t10_vpd** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = getelementptr inbounds i8, i8* %5, i64 1
  %7 = load i8, i8* %6, align 1
  %8 = zext i8 %7 to i32
  %9 = and i32 %8, 15
  %10 = trunc i32 %9 to i8
  %11 = load %struct.t10_vpd*, %struct.t10_vpd** %3, align 8
  %12 = getelementptr inbounds %struct.t10_vpd, %struct.t10_vpd* %11, i32 0, i32 0
  store i8 %10, i8* %12, align 1
  %13 = load %struct.t10_vpd*, %struct.t10_vpd** %3, align 8
  %14 = call i32 @transport_dump_vpd_ident_type(%struct.t10_vpd* %13, i32* null, i32 0)
  ret i32 %14
}

declare dso_local i32 @transport_dump_vpd_ident_type(%struct.t10_vpd*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
